stream_output: don't skip fifocount check on MuxGetStream

Even if we can add stream in any time, we should just continue
to next track if there isn't enough blocks in this track. Otherwise we
could try to query empty fifo.

ref #15747